# Starship

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
docs/: CHANGELOG.md  LINUX.md  TODO.md
scripts/: build.bat  build.sh  build_and_run.bat  build_and_run.sh
src/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  CollisionDetector.hpp  DoubleShot.cpp  DoubleShot.hpp  Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp  IEntity.hpp  IFallingEntity.hpp  IMenu.hpp  IPowerUp.hpp  Main.cpp  Missle.cpp  Missle.hpp  Score.hpp  Shield.cpp  Shield.hpp  Ship.cpp  Ship.hpp  Spawner.cpp  Spawner.hpp  SpeedBoost.cpp  SpeedBoost.hpp  StartMenu.cpp  StartMenu.hpp
